--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,10 @@
 x64/
 x86/
 bld/
-[Bb]in/
+/MinishiftTest4/bin/
+/MinishiftTest4/Bin/
+/MinishiftTest4/**/bin/
+/MinishiftTest4/**/Bin/
 [Oo]bj/
 [Ll]og/
 
